--- a/projects/2022-04-16-animal-kingdom-cardgame.html
+++ b/projects/2022-04-16-animal-kingdom-cardgame.html
@@ -85,61 +85,108 @@
 		<div id="project-content" class="container animate-box">
 			<div class="row top-line">
 				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
-					<h2>The eyes that didn't want to sleep</h2>
-					<p>Personal project to remake some illustrations from this book, written by Maria Antônia Ramos Coutinho and originally illustrated by Igor Balbachevsky.</p>
+					<h2>Whose Kingdom is it?</h2>
+					<p>For this project I illustrated 6 animals (3 ferocious and 3 passive) and their respective amulets that increase their power.
+                    The game is focused in children between 6 and 10 years old, but ideally it should be played together with other older family members.</p>
 					
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Book Illustration</li>
-							<li>Character design</li>
+							<li>Card Game Art</li>
+							<li>Animals</li>
 						</ul>
 					</div>
 
-					<p><a target="_blank" href="https://www.behance.net/gallery/163167049/Capa-de-livro-infantil" class="btn btn-primary">Visit on Behance</a></p>
+					<p><a target="_blank" href="https://www.behance.net/gallery/141796271/Illustrations-of-animals-amulets-for-card-game" class="btn btn-primary">Visit on Behance</a></p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/2-cover.jpg" class="img-responsive" alt="Sketch of my version of the book cover, with a red-haired child with eyes wide open, wrapped in a blanket, and colored boats on the curtain at the right side in a bedroom with blue wall and pink bed">
-						<figcaption>Final result of the cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/1-original-cover.png" class="img-responsive" alt="Cover of the original book, with a red-haired child and boats above in a white background">
-						<figcaption>Original book cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/3-sketch.png" class="img-responsive" alt="My version of the book cover, with a red-haired child with eyes wide open, wrapped in a blanket, and colored boats on the curtain at the right side in a bedroom with blue wall and pink bed">
-						<figcaption>Sketch of my version of the cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/4-kid-character-design.png" class="img-responsive" alt="Character design of the red-haired child wearing blue pijamas, in many poses: in doubt, happy and running scaried">
-						<figcaption>Character design of the child</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/5-mother-character-design.png" class="img-responsive" alt="Character design of the red-haired mother, wearing a aqua green shirt, salmon color pants and white sneakers., in many poses: explaining, confused and imagining.">
-						<figcaption>Character design of the Mother</figcaption>
-					</figure>
-				</div>
 				<div class="col-md-12">
 					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/6-page.png" class="img-responsive" alt="Application of the illustration on a double page of the book. It represents the mother sitting on the bed where her son is, inventing a story based on the boats that appear on the curtain. The transition between what is being imagined and what is real is done through clouds that permeate the illustration. The mother is happily pulling back the curtain and the child has a surprised face.">
-						<figcaption>Internal illustration</figcaption>
+						<img src="../images/projects/2022-04-16-animal-kingdom-cardgame/cards.png" class="img-responsive" alt="Photo of the cards of animals and amulets scattered on the grass">
+						<figcaption>Cards</figcaption>
 					</figure>
 				</div>
-				<div class="col-md-8 col-md-offset-2">
-					<p><img src="../images/projects/2023-02-06-eyes-book/7-detail-page1.png" class="img-responsive" alt="Zoom showing the character details of the illustration above."></p>
-					<p><img src="../images/projects/2023-02-06-eyes-book/7-detail-page2.png" class="img-responsive" alt="Zoom showing the boats details of the illustration above."></p>
+                <div class="col-md-12">
+					<figure>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/ownl.jpg" class="img-responsive" alt="White ownl in a pink background">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/ownl-amulet.jpg" class="img-responsive" alt="Magic amulet of a book and glasses on it in a pink background">
+                            </div>
+                        </div>
+						<figcaption>Ownl and their amulet</figcaption>
+					</figure>
 				</div>
+                <div class="col-md-12">
+					<figure>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/mouse.jpg" class="img-responsive" alt="White mouse in a orange background">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/mouse-amulet.jpg" class="img-responsive" alt="Magic amulet of a cheese in a orange background">
+                            </div>
+                        </div>
+						<figcaption>Mouse and their amulet</figcaption>
+					</figure>
+				</div>
+                <div class="col-md-12">
+					<figure>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/monkey.jpg" class="img-responsive" alt="Brown monkey in a green background">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/monkey-amulet.jpg" class="img-responsive" alt="Magic amulet of a banana in a green background">
+                            </div>
+                        </div>
+						<figcaption>Monkey and their amulet</figcaption>
+					</figure>
+				</div>
+                <div class="col-md-12">
+					<figure>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/hyena.jpg" class="img-responsive" alt="Hyena in a dark red background">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/hyena-amulet.jpg" class="img-responsive" alt="Amulet of bones and meat in a dark red background">
+                            </div>
+                        </div>
+						<figcaption>Hyena and their amulet</figcaption>
+					</figure>
+				</div>
+                <div class="col-md-12">
+					<figure>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/lion.jpg" class="img-responsive" alt="Yellow lion in a dark blue background">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/lion-amulet.jpg" class="img-responsive" alt="Amulet of a crown in a dark blue background">
+                            </div>
+                        </div>
+						<figcaption>Lion and their amulet</figcaption>
+					</figure>
+				</div>
+                <div class="col-md-12">
+					<figure>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/snake.jpg" class="img-responsive" alt="Green snake in a purple background">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/snake-amulet.jpg" class="img-responsive" alt="Amulet of a green poison flask in a purple background">
+                            </div>
+                        </div>
+						<figcaption>Snake and their amulet</figcaption>
+					</figure>
+				</div>
+                
+
 					<!-- <div class="testimony animate-box">
 						<blockquote>
 							<p>xxxx</p>
