--- a/index.html
+++ b/index.html
@@ -99,11 +99,24 @@
 
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="projects/2023-02-06-eyes-book.html">
-						<div class="work-grid" style="background-image:url(images/thumbs/eyes.png);">
+						<div class="work-grid" style="background-image:url(images/thumbs/eyes-thumb.png);">
 							<div class="inner">
 								<div class="desc">
 									<h3>The eyes that didn't want to sleep</h3>
-									<span class="cat">Book Illustration</span>
+									<span class="cat">Book Illustrations</span>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="projects/2022-04-16-animal-kingdom-cardgame.html">
+						<div class="work-grid" style="background-image:url(images/thumbs/animal-kingdom-thumb.png);">
+							<div class="inner">
+								<div class="desc">
+									<h3>Whose Kingdom is it?</h3>
+									<span class="cat">Card Game Illustrations</span>
 								</div>
 							</div>
 						</div>
