feat: people sketches and fix image size

--- a/index.html
+++ b/index.html
@@ -90,37 +90,51 @@
 						<div class="work-grid" style="background-image:url(images/main-banner.png);">
 							<div class="main-banner">
 								<div class="desc">
-									<h1>Wellcome! I'm a illustrator and character designer</h1>
+									<h1>I'm a illustrator and character designer</h1>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="projects/2023-02-06-eyes-book.html">
-						<div class="work-grid" style="background-image:url(images/thumbs/eyes-thumb.png);">
-							<div class="inner">
-								<div class="desc">
-									<h3>The eyes that didn't want to sleep</h3>
-									<span class="cat">Book Illustrations</span>
+				<div id="work-thumbs">
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2023-02-06-eyes-book.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/eyes-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>The eyes that didn't want to sleep</h3>
+										<span class="cat">Book Illustrations</span>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="projects/2022-04-16-animal-kingdom-cardgame.html">
-						<div class="work-grid" style="background-image:url(images/thumbs/animal-kingdom-thumb.png);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Whose Kingdom is it?</h3>
-									<span class="cat">Card Game Illustrations</span>
+						</a>
+					</div>
+	
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2022-04-16-animal-kingdom-cardgame.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/animal-kingdom-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Whose Kingdom is it?</h3>
+										<span class="cat">Card Game Illustrations</span>
+									</div>
 								</div>
 							</div>
-						</div>
-					</a>
+						</a>
+					</div>
+
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2022-03-07-people-sketches.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/people-sketches-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>People Sketches</h3>
+										<span class="cat">Figure Drawing</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
 				</div>
 
 			</div>
@@ -142,7 +156,7 @@
 						<div class="desc animate-box">
 							<span>Illustrator & Character Designer</span>
 							<h3>Juliana Iasi</h3>
-							<p>Hello, I am a professional freelancer illustrator and character designer based in the state of São Paulo, Brazil, with 3 years experience working between illustration and games.</p>
+							<p>Hello, I am a professional freelancer illustrator and character designer based in the state of São Paulo, Brazil, since 2019 working between illustration, animation and games.</p>
 							<p><a href="contact.html" class="btn btn-primary btn-outline">Learn More</a></p>
 							<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
