--- a/projects/2022-03-07-people-sketches.html
+++ b/projects/2022-03-07-people-sketches.html
@@ -85,105 +85,63 @@
 		<div id="project-content" class="container animate-box">
 			<div class="row top-line">
 				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
-					<h2>Whose Kingdom is it?</h2>
-					<p>For this project I illustrated 6 animals (3 ferocious and 3 passive) and their respective amulets that increase their power.
-                    The game is focused in children between 6 and 10 years old, but ideally it should be played together with other older family members.</p>
+					<h2>People sketches</h2>
+					<p>Sketches based on real people, among which some are strangers, some are friends and others are based on iconic photos.</p>
 					
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Card Game Art</li>
-							<li>Animals</li>
+							<li>Figure Drawing</li>
+							<li>Sketches</li>
+							<li>Character Design</li>
 							<li>Digital Painting</li>
 						</ul>
 					</div>
-
-					<p><a target="_blank" href="https://www.behance.net/gallery/141796271/Illustrations-of-animals-amulets-for-card-game" class="btn btn-primary">Visit on Behance</a></p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-6">
+					<img src="../images/projects/2023-03-07-people-sketches/2.jpg" class="img-responsive" alt="Black stylish woman wearing pink jumpsuit and red glasses in a green background">
+				</div>
+				<div class="col-md-6">
+					<img src="../images/projects/2023-03-07-people-sketches/3.jpg" class="img-responsive" alt="White blonde woman wearing a green t-shirt and blue jeans, drinking tea sitting on a pink stool in front of a small table in a light blue background">
+				</div>
+				<div class="col-md-6">
+					<img src="../images/projects/2023-03-07-people-sketches/5.jpg" class="img-responsive" alt="Old white woman with glasses wearing black in a magenta background">
+				</div>
+				<div class="col-md-6">
+					<img src="../images/projects/2023-03-07-people-sketches/6.jpg" class="img-responsive" alt="Tanned woman wearing fancy clothes, jaguar sneakers in a yellow background">
+				</div>
+				<div class="col-md-6">
+					<img src="../images/projects/2023-03-07-people-sketches/7.jpg" class="img-responsive" alt="Black stylish woman wearing white and red shoes in a brown background">
+				</div>
+				<div class="col-md-6">
+					<img src="../images/projects/2023-03-07-people-sketches/8.jpg" class="img-responsive" alt="White stylish woman with glasses wearing white and dark blue, holding a bag">
+				</div>
+                <div class="col-md-12">
 					<figure>
-						<img src="../images/projects/2022-04-16-animal-kingdom-cardgame/cards.png" class="img-responsive" alt="Photo of the cards of animals and amulets scattered on the grass">
-						<figcaption>Cards</figcaption>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="../images/projects/2023-03-07-people-sketches/1.jpg" class="img-responsive" alt="Sketch of the woman and her face. White woman with dark clores and brown hair.">
+                            </div>
+                            <div class="col-md-6">
+                                <img src="../images/projects/2023-03-07-people-sketches/1-reference.jpg" class="img-responsive" alt="photo of the woman in black and white with illegible writing on a glass, behind which trees appear">
+                            </div>
+                        </div>
+						<figcaption>Female character based on a photograph exhibited in the Sumaré subway, in São Paulo</figcaption>
 					</figure>
 				</div>
                 <div class="col-md-12">
 					<figure>
                         <div class="row">
                             <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/ownl.jpg" class="img-responsive" alt="White ownl in a pink background">
+                                <img src="../images/projects/2023-03-07-people-sketches/4.jpg" class="img-responsive" alt="Sketch of the man and his face. White man with striped shirt and ugly face.">
                             </div>
                             <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/ownl-amulet.jpg" class="img-responsive" alt="Magic amulet of a book and glasses on it in a pink background">
+                                <img src="../images/projects/2023-03-07-people-sketches/4-reference.jpg" class="img-responsive" alt="photo of the man in black and white with illegible writing on a glass, behind which trees appear">
                             </div>
                         </div>
-						<figcaption>Ownl and their amulet</figcaption>
-					</figure>
-				</div>
-                <div class="col-md-12">
-					<figure>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/mouse.jpg" class="img-responsive" alt="White mouse in a orange background">
-                            </div>
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/mouse-amulet.jpg" class="img-responsive" alt="Magic amulet of a cheese in a orange background">
-                            </div>
-                        </div>
-						<figcaption>Mouse and their amulet</figcaption>
-					</figure>
-				</div>
-                <div class="col-md-12">
-					<figure>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/monkey.jpg" class="img-responsive" alt="Brown monkey in a green background">
-                            </div>
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/monkey-amulet.jpg" class="img-responsive" alt="Magic amulet of a banana in a green background">
-                            </div>
-                        </div>
-						<figcaption>Monkey and their amulet</figcaption>
-					</figure>
-				</div>
-                <div class="col-md-12">
-					<figure>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/hyena.jpg" class="img-responsive" alt="Hyena in a dark red background">
-                            </div>
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/hyena-amulet.jpg" class="img-responsive" alt="Amulet of bones and meat in a dark red background">
-                            </div>
-                        </div>
-						<figcaption>Hyena and their amulet</figcaption>
-					</figure>
-				</div>
-                <div class="col-md-12">
-					<figure>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/lion.jpg" class="img-responsive" alt="Yellow lion in a dark blue background">
-                            </div>
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/lion-amulet.jpg" class="img-responsive" alt="Amulet of a crown in a dark blue background">
-                            </div>
-                        </div>
-						<figcaption>Lion and their amulet</figcaption>
-					</figure>
-				</div>
-                <div class="col-md-12">
-					<figure>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/snake.jpg" class="img-responsive" alt="Green snake in a purple background">
-                            </div>
-                            <div class="col-md-6">
-                                <img src="../images/projects/2022-04-16-animal-kingdom-cardgame/snake-amulet.jpg" class="img-responsive" alt="Amulet of a green poison flask in a purple background">
-                            </div>
-                        </div>
-						<figcaption>Snake and their amulet</figcaption>
+						<figcaption>Male character based on a photograph exhibited in the Sumaré subway, in São Paulo</figcaption>
 					</figure>
 				</div>
                 
