--- a/projects/2023-02-06-eyes-book.html
+++ b/projects/2023-02-06-eyes-book.html
@@ -93,6 +93,7 @@
 						<ul>
 							<li>Book Illustration</li>
 							<li>Character design</li>
+							<li>Digital Paiting</li>
 						</ul>
 					</div>
 
