--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,8 @@
 							<span>Illustrator & Character Designer</span>
 							<h3>Juliana Iasi</h3>
 							<p>I am a professional freelancer illustrator and character designer based in the state of São Paulo, Brazil, since 2019 working between illustration, animation and games.</p>
-							<p>I worked for a year as an artist of mobile game assets (as UI elements, animated scenarios and characters) and then also illustrated some books, card games, presentations, advertising  and short 2D animations for social media.</p>
+							<p>I worked for a year as an artist of mobile game assets (UI elements, animated scenarios and characters) and then also illustrated some books, card games, presentations, advertising  and short 2D animations for social media.</p>
+							<p>Some themes I usually work on (but not only) are: cute and funny characters, nature, fantasy and children books. <strong>And I'm passionate about what I do!</strong></p>
 							<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
 								<li><a href="https://www.behance.net/julianaiasi" target="_blank"><i class="icon-behance"></i></a></li>
