feat: 3 new projects

--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="work">
-						<div class="work-grid" style="background-image:url(images/main-banner.png);">
+						<div class="work-grid work-grid-main-banner" style="background-image:url(images/main-banner.png);">
 							<div class="main-banner">
 								<div class="desc">
-									<h1>I'm a illustrator and character designer</h1>
+									<h1>Hi, I'm Juliana Iasi</h1>
+									<span>illustrator and character designer</span>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div id="work-thumbs">
+
 					<div class="col-md-4 text-center animate-box">
 						<a class="work" href="projects/2023-02-06-eyes-book.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/eyes-thumb.png);">
@@ -116,7 +118,7 @@
 								<div class="inner">
 									<div class="desc">
 										<h3>Whose Kingdom is it?</h3>
-										<span class="cat">Card Game Illustrations</span>
+										<span class="cat">Card Game Art</span>
 									</div>
 								</div>
 							</div>
@@ -135,6 +137,46 @@
 							</div>
 						</a>
 					</div>
+
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2021-04-18-class.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/class-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Classroom</h3>
+										<span class="cat">Illustration</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+	
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2021-01-15-climber-fox.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/climber-fox-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Climber Fox</h3>
+										<span class="cat">Illustration</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2023-03-08-professional-girls.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/professional-girls-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Professional Girls</h3>
+										<span class="cat">Illustration</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
 				</div>
 
 			</div>
