--- a/projects/2023-03-08-professional-girls.html
+++ b/projects/2023-03-08-professional-girls.html
@@ -85,61 +85,40 @@
 		<div id="project-content" class="container animate-box">
 			<div class="row top-line">
 				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
-					<h2>The eyes that didn't want to sleep</h2>
-					<p>Personal project to remake some illustrations from this book, written by Maria Antônia Ramos Coutinho and originally illustrated by Igor Balbachevsky.</p>
+					<h2>Professional girls</h2>
+					<p>llustration of three girls wearing different professional clothes to share a workshop offered by the ABC volunteer project, which is focused on human development of girls from the suburbs.</p>
 					
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Child Book Illustration</li>
+							<li>Kid Illustration</li>
 							<li>Character design</li>
+							<li>Advertising</li>
 							<li>Digital Paiting</li>
 						</ul>
 					</div>
 
-					<p><a target="_blank" href="https://www.behance.net/gallery/163167049/Remake-of-illustrations-from-a-childrens-book" class="btn btn-primary">Visit on Behance</a></p>
+					<p><a target="_blank" href="https://www.behance.net/gallery/168052469/Girls-Illustration-for-Volunteer-Project" class="btn btn-primary">Visit on Behance</a></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/2-cover.jpg" class="img-responsive" alt="Sketch of my version of the book cover, with a red-haired child with eyes wide open, wrapped in a blanket, and colored boats on the curtain at the right side in a bedroom with blue wall and pink bed">
-						<figcaption>Final result of the cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/1-original-cover.png" class="img-responsive" alt="Cover of the original book, with a red-haired child and boats above in a white background">
-						<figcaption>Original book cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/3-sketch.png" class="img-responsive" alt="My version of the book cover, with a red-haired child with eyes wide open, wrapped in a blanket, and colored boats on the curtain at the right side in a bedroom with blue wall and pink bed">
-						<figcaption>Sketch of my version of the cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/4-kid-character-design.png" class="img-responsive" alt="Character design of the red-haired child wearing blue pijamas, in many poses: in doubt, happy and running scaried">
-						<figcaption>Character design of the child</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/5-mother-character-design.png" class="img-responsive" alt="Character design of the red-haired mother, wearing a aqua green shirt, salmon color pants and white sneakers., in many poses: explaining, confused and imagining.">
-						<figcaption>Character design of the Mother</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-12">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/6-page.png" class="img-responsive" alt="Application of the illustration on a double page of the book. It represents the mother sitting on the bed where her son is, inventing a story based on the boats that appear on the curtain. The transition between what is being imagined and what is real is done through clouds that permeate the illustration. The mother is happily pulling back the curtain and the child has a surprised face.">
-						<figcaption>Internal illustration</figcaption>
+						<img src="../images/projects/2023-03-08-professional-girls/profissoes.png" class="img-responsive" alt="illustration of three girls in professional clothes. On the left is a black girl dressed as a photographer, in the center is a brunette girl dressed as a doctor and on the right is a white and blonde girl dressed as a teacher.">
+						<figcaption>Illustration of the three professional girls</figcaption>
 					</figure>
 				</div>
 				<div class="col-md-8 col-md-offset-2">
-					<p><img src="../images/projects/2023-02-06-eyes-book/7-detail-page1.png" class="img-responsive" alt="Zoom showing the character details of the illustration above."></p>
-					<p><img src="../images/projects/2023-02-06-eyes-book/7-detail-page2.png" class="img-responsive" alt="Zoom showing the boats details of the illustration above."></p>
+					<figure>
+						<img src="../images/projects/2023-03-08-professional-girls/sketch-profissoes.png" class="img-responsive" alt="Sketch of the illustration above">
+						<figcaption>Sketch</figcaption>
+					</figure>
+				</div>
+				<div class="col-md-8 col-md-offset-2">
+					<figure>
+						<img src="../images/projects/2023-03-08-professional-girls/workshop-profissoes-post.png" class="img-responsive" alt="Advertising image containing the illustration in a pink background and the title 'workshop de profissões 29/04/2023' and a call to action below">
+						<figcaption>Final art</figcaption>
+					</figure>
 				</div>
 					<!-- <div class="testimony animate-box">
 						<blockquote>
