--- a/projects/2021-04-18-class.html
+++ b/projects/2021-04-18-class.html
@@ -85,61 +85,30 @@
 		<div id="project-content" class="container animate-box">
 			<div class="row top-line">
 				<div class="col-md-8 col-md-push-2 text-left fh5co-heading">
-					<h2>The eyes that didn't want to sleep</h2>
-					<p>Personal project to remake some illustrations from this book, written by Maria Antônia Ramos Coutinho and originally illustrated by Igor Balbachevsky.</p>
+					<h2>Classroom illustration</h2>
 					
 					<div class="role">
 						<h3>Role</h3>
 						<ul>
-							<li>Child Book Illustration</li>
-							<li>Character design</li>
+							<li>kid Illustration</li>
+							<li>Schoolbook</li>
 							<li>Digital Paiting</li>
 						</ul>
 					</div>
 
-					<p><a target="_blank" href="https://www.behance.net/gallery/163167049/Remake-of-illustrations-from-a-childrens-book" class="btn btn-primary">Visit on Behance</a></p>
+					<p><a target="_blank" href="https://www.behance.net/gallery/117777337/Classroom-illustration" class="btn btn-primary">Visit on Behance</a></p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/2-cover.jpg" class="img-responsive" alt="Sketch of my version of the book cover, with a red-haired child with eyes wide open, wrapped in a blanket, and colored boats on the curtain at the right side in a bedroom with blue wall and pink bed">
-						<figcaption>Final result of the cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/1-original-cover.png" class="img-responsive" alt="Cover of the original book, with a red-haired child and boats above in a white background">
-						<figcaption>Original book cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/3-sketch.png" class="img-responsive" alt="My version of the book cover, with a red-haired child with eyes wide open, wrapped in a blanket, and colored boats on the curtain at the right side in a bedroom with blue wall and pink bed">
-						<figcaption>Sketch of my version of the cover</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/4-kid-character-design.png" class="img-responsive" alt="Character design of the red-haired child wearing blue pijamas, in many poses: in doubt, happy and running scaried">
-						<figcaption>Character design of the child</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-6">
-					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/5-mother-character-design.png" class="img-responsive" alt="Character design of the red-haired mother, wearing a aqua green shirt, salmon color pants and white sneakers., in many poses: explaining, confused and imagining.">
-						<figcaption>Character design of the Mother</figcaption>
-					</figure>
-				</div>
 				<div class="col-md-12">
 					<figure>
-						<img src="../images/projects/2023-02-06-eyes-book/6-page.png" class="img-responsive" alt="Application of the illustration on a double page of the book. It represents the mother sitting on the bed where her son is, inventing a story based on the boats that appear on the curtain. The transition between what is being imagined and what is real is done through clouds that permeate the illustration. The mother is happily pulling back the curtain and the child has a surprised face.">
-						<figcaption>Internal illustration</figcaption>
+						<img src="../images/projects/2021-04-18-class/class.png" class="img-responsive" alt="Illustration of a black teacher in red clothes teaching children of different ethnicities. The room is in salmon tones and a blackboard, a window and a world map appear in the background.">
+						<figcaption>The classroom</figcaption>
 					</figure>
 				</div>
 				<div class="col-md-8 col-md-offset-2">
-					<p><img src="../images/projects/2023-02-06-eyes-book/7-detail-page1.png" class="img-responsive" alt="Zoom showing the character details of the illustration above."></p>
-					<p><img src="../images/projects/2023-02-06-eyes-book/7-detail-page2.png" class="img-responsive" alt="Zoom showing the boats details of the illustration above."></p>
+					<p><img src="../images/projects/2021-04-18-class/class-detail1.jpg" class="img-responsive" alt="Zoom showing the teacher of the illustration above."></p>
+					<p><img src="../images/projects/2021-04-18-class/class-detail2.jpg" class="img-responsive" alt="Zoom showing the kids of the illustration above."></p>
 				</div>
 					<!-- <div class="testimony animate-box">
 						<blockquote>
