--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@
 							</div>
 						</a>
 					</div>
+		
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2020-07-30-funny-taiga.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/taiga-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Funny Taiga</h3>
+										<span class="cat">Pattern</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
 
 				</div>
 
