--- a/index.html
+++ b/index.html
@@ -189,6 +189,19 @@
 							</div>
 						</a>
 					</div>
+		
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2023-03-31-sofia-penelope.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/sofia-penelope-thumb.gif);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Sofia & Penélope</h3>
+										<span class="cat">2D animation</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
 
 				</div>
 
