--- a/projects/2023-03-31-sofia-penelope.html
+++ b/projects/2023-03-31-sofia-penelope.html
@@ -92,7 +92,7 @@
 						<h3>Role</h3>
 						<ul>
 							<li>2D animtaion</li>
-							<li>Digial arte</li>
+							<li>Digial painting</li>
 						</ul>
 					</div>
 
@@ -100,9 +100,9 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-9 col-md-offset-2">
+				<div class="col-md-8 col-md-offset-2">
 					<figure>
-						<img src="../images/projects/2023-03-31-sofia-penelope/sofia-penelop.gif" class="img-responsive" alt="Simple loop @D animation of a black girl in a blue and yellow dress sitting on the grass petting a black cat.">
+						<img src="../images/projects/2023-03-31-sofia-penelope/sofia-penelop.gif" class="img-responsive" alt="Simple loop 2D animation of a black girl in a blue and yellow dress sitting on the grass petting a black cat.">
 						<figcaption>Animated gif</figcaption>
 					</figure>
 				</div>
