--- a/index.html
+++ b/index.html
@@ -190,6 +190,20 @@
 						</a>
 					</div>
 		
+	
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2022-04-22-animated-islands.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/islands-thumbs.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Animated Islands</h3>
+										<span class="cat">Game art</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+	
 					<div class="col-md-4 text-center animate-box">
 						<a class="work" href="projects/2023-03-31-sofia-penelope.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/sofia-penelope-thumb.gif);">
