--- a/index.html
+++ b/index.html
@@ -217,6 +217,34 @@
 						</a>
 					</div>
 
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2021-01-31-alice-in-wonderland.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/alice-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Alice in Wonderland</h3>
+										<span class="cat">Book illustration</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2021-02-02-doly-characters.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/doly-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Isai, Doly & Juseza</h3>
+										<span class="cat">Character design</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					
+
 				</div>
 
 			</div>
