--- a/index.html
+++ b/index.html
@@ -189,7 +189,32 @@
 							</div>
 						</a>
 					</div>
-		
+
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2023-04-10-penelope-watercolor.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/cat-thumb.png);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Penélope watercolor</h3>
+										<span class="cat">paiting</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="col-md-4 text-center animate-box">
+						<a class="work" href="projects/2023-03-31-sofia-penelope.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/sofia-penelope-thumb.gif);">
+								<div class="inner">
+									<div class="desc">
+										<h3>Sofia & Penélope</h3>
+										<span class="cat">2D animation</span>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
 	
 					<div class="col-md-4 text-center animate-box">
 						<a class="work" href="projects/2022-04-22-animated-islands.html">
@@ -203,14 +228,14 @@
 							</div>
 						</a>
 					</div>
-	
+					
 					<div class="col-md-4 text-center animate-box">
-						<a class="work" href="projects/2023-03-31-sofia-penelope.html">
-							<div class="work-grid" style="background-image:url(images/thumbs/sofia-penelope-thumb.gif);">
+						<a class="work" href="projects/2021-02-02-doly-characters.html">
+							<div class="work-grid" style="background-image:url(images/thumbs/doly-thumb.png);">
 								<div class="inner">
 									<div class="desc">
-										<h3>Sofia & Penélope</h3>
-										<span class="cat">2D animation</span>
+										<h3>Isai, Doly & Juseza</h3>
+										<span class="cat">Character design</span>
 									</div>
 								</div>
 							</div>
@@ -229,21 +254,7 @@
 							</div>
 						</a>
 					</div>
-
-					<div class="col-md-4 text-center animate-box">
-						<a class="work" href="projects/2021-02-02-doly-characters.html">
-							<div class="work-grid" style="background-image:url(images/thumbs/doly-thumb.png);">
-								<div class="inner">
-									<div class="desc">
-										<h3>Isai, Doly & Juseza</h3>
-										<span class="cat">Character design</span>
-									</div>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					
+		
 
 				</div>
 
