--- a/images/signature/signature.html
+++ b/images/signature/signature.html
@@ -24,7 +24,7 @@
                     <br/>
                     <strong style="text-transform: uppercase; font-size: 14px;">Illustrator & Character Designer</strong>
                     <br/>
-                    <span style="margin: 0 16px 0 0;">juiasi.art@gmail.com</span>
+                    <a href="mailto:juiasi.art@gmail.com" style="margin-right: 8px; color: #EF756F;">juiasi.art@gmail.com</a><a href="https://juiasi.github.io/" target="_blank" style="color: #EF756F;  border-left: 1px solid #EF756F; padding-left: 8px;">juiasi.github.io</a>
                 </td>
             </tr>
             <tr>
