--- a/images/signature/signature.html
+++ b/images/signature/signature.html
@@ -18,18 +18,15 @@
     color: rgb(73, 73, 73);">
         <tbody>
             <tr>
-                <td rowspan="2" width="136px" style="vertical-align: top;"><img width="120px" height="120px" src="https://juiasi.github.io/images/signature/photo.png"/></td>
-                <td width="464px">
+                <td width="136px" style="vertical-align: top;"><img width="120px" height="120px" src="https://juiasi.github.io/images/signature/photo.png"/></td>
+                <td>
                     <strong style="font-size: 24px; color: #EF756F; ">Juliana Iasi</strong>
                     <br/>
                     <strong style="text-transform: uppercase; font-size: 14px;">Illustrator & Character Designer</strong>
                     <br/>
                     <a href="mailto:juiasi.art@gmail.com" style="margin-right: 8px; color: #EF756F;">juiasi.art@gmail.com</a><a href="https://juiasi.github.io/" target="_blank" style="color: #EF756F;  border-left: 1px solid #EF756F; padding-left: 8px;">juiasi.github.io</a>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <hr style="border-top: 1px solid #EF756F; margin-bottom: 12px;"/>
+                    <br/>
+                    <hr style="border-top: 1px solid #EF756F; margin: 12px 0 14px 0;"/>
                     <a href="https://juiasi.github.io/" target="_blank" style="color: #EF756F;"><img style="height: 20px; width: 127px; margin: 0 4px 0 0;" src="https://juiasi.github.io/images/signature/site-icon.png"/></a>
                     <a href="https://www.instagram.com/juiasi" target="_blank" style="color: #EF756F;"><img style="height: 20px; width: 20px; margin: 0 4px 0 0;" src="https://juiasi.github.io/images/signature/instagram.png"/></a>
                     <a href="https://www.behance.net/julianaiasi" target="_blank" style="color: #EF756F;"><img style="height: 20px; width: 20px; margin: 0 4px 0 0;" src="https://juiasi.github.io/images/signature/behance.png"/></a>
