fix: animate box

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 						</div>
 					</div>
 				</div>
-				<div id="work-thumbs">
+				<div id="work-thumbs animate-box">
 
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2023-02-06-eyes-book.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/eyes-thumb.png);">
 								<div class="inner">
@@ -112,7 +112,7 @@
 						</a>
 					</div>
 	
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2022-04-16-animal-kingdom-cardgame.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/animal-kingdom-thumb.png);">
 								<div class="inner">
@@ -125,7 +125,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2022-03-07-people-sketches.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/people-sketches-thumb.png);">
 								<div class="inner">
@@ -138,7 +138,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2021-04-18-class.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/class-thumb.png);">
 								<div class="inner">
@@ -151,7 +151,7 @@
 						</a>
 					</div>
 	
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2021-01-15-climber-fox.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/climber-fox-thumb.png);">
 								<div class="inner">
@@ -164,7 +164,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2023-03-08-professional-girls.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/professional-girls-thumb.png);">
 								<div class="inner">
@@ -177,7 +177,7 @@
 						</a>
 					</div>
 		
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2020-07-30-funny-taiga.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/taiga-thumb.png);">
 								<div class="inner">
@@ -190,7 +190,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2023-04-10-penelope-watercolor.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/cat-thumb.png);">
 								<div class="inner">
@@ -203,7 +203,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2023-03-31-sofia-penelope.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/sofia-penelope-thumb.gif);">
 								<div class="inner">
@@ -216,7 +216,7 @@
 						</a>
 					</div>
 	
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2022-04-22-animated-islands.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/islands-thumbs.png);">
 								<div class="inner">
@@ -229,7 +229,7 @@
 						</a>
 					</div>
 					
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2021-02-02-doly-characters.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/doly-thumb.png);">
 								<div class="inner">
@@ -242,7 +242,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 text-center animate-box">
+					<div class="col-md-4 text-center">
 						<a class="work" href="projects/2021-01-31-alice-in-wonderland.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/alice-thumb.png);">
 								<div class="inner">
@@ -263,8 +263,8 @@
 	</div>
 	
 	<div id="fh5co-author" class="fh5co-bg-section">
-		<div class="container">
-			<div class="row animate-box">
+		<div class="container animate-box">
+			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>A little about me</h2>
 				</div>
@@ -272,9 +272,9 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="author">
-						<div class="author-inner animate-box" style="background-image: url(images/julianaiasi-portrait.png);">
+						<div class="author-inner" style="background-image: url(images/julianaiasi-portrait.png);">
 						</div>
-						<div class="desc animate-box">
+						<div class="desc">
 							<span>Illustrator & Character Designer</span>
 							<h3>Juliana Iasi</h3>
 							<p>Hello, I am a professional freelancer illustrator and character designer based in the state of São Paulo, Brazil, since 2019 working between illustration, animation and games.</p>
