--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 						</a>
 					</div>
 
-					<div class="col-md-4 text-center">
+					<!-- <div class="col-md-4 text-center">
 						<a class="work" href="projects/2021-01-31-alice-in-wonderland.html">
 							<div class="work-grid" style="background-image:url(images/thumbs/alice-thumb.png);">
 								<div class="inner">
@@ -266,7 +266,7 @@
 								</div>
 							</div>
 						</a>
-					</div>
+					</div> -->
 		
 
 				</div>
@@ -290,7 +290,7 @@
 						<div class="desc">
 							<span>Illustrator & Character Designer</span>
 							<h3>Juliana Iasi</h3>
-							<p>Hello, I am a professional freelancer illustrator and character designer based in the state of São Paulo, Brazil, since 2019 working between illustration, animation and games.</p>
+							<p>Hello, I am a professional freelancer illustrator and graphic designer based in the state of São Paulo, Brazil, since 2019 working between illustration, layout, animation and games.</p>
 							<p><a href="contact.html" class="btn btn-primary btn-outline">Learn More</a></p>
 							<ul class="fh5co-social-icons">
 								<li><a href="https://www.instagram.com/juiasi/" target="_blank"><i class="icon-instagram"></i></a></li>
