--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title>Juliana Iasi | Illustrator</title>
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Juliana Iasi | Illustrator and character designer" />
-	<meta name="keywords" content="illustrator, illustration, book, animation, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
+	<meta name="description" content="Juliana Iasi | Illustrator and Graphic designer" />
+	<meta name="keywords" content="illustrator, illustration, book, animation, graphic design, character design, character designer, kid, kid lit, kidlit, children book, picture book" />
 	<meta name="author" content="FreeHTML5.co" />
 
 	<!-- 
@@ -25,13 +25,13 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Juliana Iasi | Illustrator and Character Designer"/>
+	<meta property="og:title" content="Juliana Iasi | Illustrator and Graphic Designer"/>
 	<meta property="og:image" content="https://juiasi.github.io/images/cover-social-media.png"/>
 	<meta property="og:url" content="https://juiasi.github.io/"/>
 	<meta property="og:site_name" content="Juliana Iasi | Illustrator"/>
 	<meta property="og:description" content="Portfolio of illustrations and character designs by Juliana Iasi"/>
 	<meta property="fb:admins" content="juiasi"/>
-	<meta name="twitter:title" content="Juliana Iasi | Illustrator and Character Designer" />
+	<meta name="twitter:title" content="Juliana Iasi | Illustrator and Graphic Designer" />
 	<meta name="twitter:image" content="https://juiasi.github.io/images/cover-social-media.png" />
 	<meta name="twitter:url" content="https://juiasi.github.io/" />
 	<meta name="twitter:card" content="summary" />
@@ -91,7 +91,7 @@
 							<div class="main-banner">
 								<div class="desc">
 									<h1>Hi, I'm Juliana Iasi</h1>
-									<span>illustrator and character designer</span>
+									<span>illustrator and graphic designer</span>
 								</div>
 							</div>
 						</div>
@@ -288,7 +288,7 @@
 						<div class="author-inner" style="background-image: url(images/julianaiasi-portrait.png);">
 						</div>
 						<div class="desc">
-							<span>Illustrator & Character Designer</span>
+							<span>Illustrator & Graphic Designer</span>
 							<h3>Juliana Iasi</h3>
 							<p>Hello, I am a professional freelancer illustrator and graphic designer based in the state of São Paulo, Brazil, since 2019 working between illustration, layout, animation and games.</p>
 							<p><a href="contact.html" class="btn btn-primary btn-outline">Learn More</a></p>
